--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -207,6 +207,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\menunewskirmish.cpp" />
     <ClCompile Include="src\menunewskirmishsingle.cpp" />
     <ClCompile Include="src\midgardid.cpp" />
+    <ClCompile Include="src\midmsgboxbuttonhandlerstd.cpp" />
     <ClCompile Include="src\scenariodata.cpp" />
     <ClCompile Include="src\scenariodataarray.cpp" />
     <ClCompile Include="src\scenarioheader.cpp" />
@@ -260,6 +261,8 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\midgardid.h" />
     <ClInclude Include="include\midgardobjectmap.h" />
     <ClInclude Include="include\midgardscenariomap.h" />
+    <ClInclude Include="include\midmsgboxbuttonhandler.h" />
+    <ClInclude Include="include\midmsgboxbuttonhandlerstd.h" />
     <ClInclude Include="include\midobject.h" />
     <ClInclude Include="include\midplayer.h" />
     <ClInclude Include="include\midscenarioobject.h" />
