Add IUsUnit structure

--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -296,6 +296,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\unitbranchcat.h" />
     <ClInclude Include="include\unitcat.h" />
     <ClInclude Include="include\unitsforhire.h" />
+    <ClInclude Include="include\usunit.h" />
     <ClInclude Include="include\version.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
