Add TUsUnitImpl structure

--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -380,6 +380,9 @@
     <ClInclude Include="include\usunit.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\usunitimpl.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\unitcat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
