Add CMidUnit structure

--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -377,6 +377,9 @@
     <ClInclude Include="include\midmsgboxbuttonhandlerstd.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\midunit.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\usunit.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
