Add LAttackSource category and table

--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -183,6 +183,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="..\fmt\src\os.cc" />
     <ClCompile Include="src\attackclasscat.cpp" />
     <ClCompile Include="src\attackreachcat.cpp" />
+    <ClCompile Include="src\attacksourcecat.cpp" />
     <ClCompile Include="src\autodialog.cpp" />
     <ClCompile Include="src\buildingcat.cpp" />
     <ClCompile Include="src\buildingtype.cpp" />
@@ -228,6 +229,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="..\Detours\src\detver.h" />
     <ClInclude Include="include\attackclasscat.h" />
     <ClInclude Include="include\attackreachcat.h" />
+    <ClInclude Include="include\attacksourcecat.h" />
     <ClInclude Include="include\autodialog.h" />
     <ClInclude Include="include\buildingcat.h" />
     <ClInclude Include="include\buildingtype.h" />
