Add CAttackImpl structure

--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -228,6 +228,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="..\Detours\src\detours.h" />
     <ClInclude Include="..\Detours\src\detver.h" />
     <ClInclude Include="include\attackclasscat.h" />
+    <ClInclude Include="include\attackimpl.h" />
     <ClInclude Include="include\attackreachcat.h" />
     <ClInclude Include="include\attacksourcecat.h" />
     <ClInclude Include="include\autodialog.h" />
