--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -410,6 +410,9 @@
     <ClInclude Include="include\attacksourcecat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\subracecat.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="module.rc">
