--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -245,6 +245,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\dbf\dbfheader.h" />
     <ClInclude Include="include\dbf\dbfrecord.h" />
     <ClInclude Include="include\dbtable.h" />
+    <ClInclude Include="include\deathanimcat.h" />
     <ClInclude Include="include\dialoginterf.h" />
     <ClInclude Include="include\difficultylevel.h" />
     <ClInclude Include="include\dynamiccast.h" />
