--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -255,6 +255,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\globaldata.h" />
     <ClInclude Include="include\hooks.h" />
     <ClInclude Include="include\idlist.h" />
+    <ClInclude Include="include\immunecat.h" />
     <ClInclude Include="include\intarray.h" />
     <ClInclude Include="include\interface.h" />
     <ClInclude Include="include\interfdialog.h" />
