Add TUsSoldierImpl structure

--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -416,6 +416,9 @@
     <ClInclude Include="include\ussoldier.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\ussoldierimpl.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\subracecat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
