--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -310,6 +310,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\unitcat.h" />
     <ClInclude Include="include\unitsforhire.h" />
     <ClInclude Include="include\ussoldier.h" />
+    <ClInclude Include="include\ussoldierimpl.h" />
     <ClInclude Include="include\usunit.h" />
     <ClInclude Include="include\usunitextension.h" />
     <ClInclude Include="include\usunitimpl.h" />
