--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -256,6 +256,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\dialoginterf.h" />
     <ClInclude Include="include\difficultylevel.h" />
     <ClInclude Include="include\dynamiccast.h" />
+    <ClInclude Include="include\fortification.h" />
     <ClInclude Include="include\functor.h" />
     <ClInclude Include="include\game.h" />
     <ClInclude Include="include\gamesettings.h" />
