--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -461,12 +461,6 @@
     <ClInclude Include="include\midinventory.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="include\midunitgroup.h">
-      <Filter>Исходные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="include\fortification.h">
-      <Filter>Исходные файлы</Filter>
-    </ClInclude>
     <ClInclude Include="include\midvillage.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
@@ -477,6 +471,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="include\ordercat.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\fortification.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\midunitgroup.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
