Add CMidRuin structure

--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -473,6 +473,9 @@
     <ClInclude Include="include\ordercat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\midruin.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\fortification.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
