--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -291,6 +291,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\midmsgboxbuttonhandlerstd.h" />
     <ClInclude Include="include\midobject.h" />
     <ClInclude Include="include\midplayer.h" />
+    <ClInclude Include="include\midruin.h" />
     <ClInclude Include="include\midscenarioobject.h" />
     <ClInclude Include="include\midserver.h" />
     <ClInclude Include="include\midserverbuilder.h" />
