--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -316,6 +316,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\scenariodata.h" />
     <ClInclude Include="include\scenariodataarray.h" />
     <ClInclude Include="include\scenarioheader.h" />
+    <ClInclude Include="include\scenarioinfo.h" />
     <ClInclude Include="include\settings.h" />
     <ClInclude Include="include\smartptr.h" />
     <ClInclude Include="include\stringandid.h" />
