--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -183,6 +183,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\dbtable.cpp" />
     <ClCompile Include="src\dialoginterf.cpp" />
     <ClCompile Include="src\dynamiccast.cpp" />
+    <ClCompile Include="src\editor.cpp" />
     <ClCompile Include="src\functor.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\globaldata.cpp" />
@@ -244,6 +245,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\dialoginterf.h" />
     <ClInclude Include="include\difficultylevel.h" />
     <ClInclude Include="include\dynamiccast.h" />
+    <ClInclude Include="include\editor.h" />
     <ClInclude Include="include\fortification.h" />
     <ClInclude Include="include\functor.h" />
     <ClInclude Include="include\game.h" />
