--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="src\dbf\dbfrecord.cpp">
       <Filter>Исходные файлы\dbf</Filter>
     </ClCompile>
+    <ClCompile Include="src\editor.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="module.def">
@@ -479,6 +482,9 @@
       <Filter>Файлы заголовков\dbf</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\editor.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
