Place race category and table separately
# Conflicts:
#	mss32/mss32.vcxproj.filters

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -202,6 +202,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\midgardid.cpp" />
     <ClCompile Include="src\midgardmsgbox.cpp" />
     <ClCompile Include="src\midmsgboxbuttonhandlerstd.cpp" />
+    <ClCompile Include="src\racecategory.cpp" />
     <ClCompile Include="src\scenariodata.cpp" />
     <ClCompile Include="src\scenariodataarray.cpp" />
     <ClCompile Include="src\scenarioheader.cpp" />
@@ -301,6 +302,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\popupdialoginterf.h" />
     <ClInclude Include="include\position.h" />
     <ClInclude Include="include\presentation.h" />
+    <ClInclude Include="include\racecategory.h" />
     <ClInclude Include="include\racetype.h" />
     <ClInclude Include="include\scenariodata.h" />
     <ClInclude Include="include\scenariodataarray.h" />
