--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -179,6 +179,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\buildingtype.cpp" />
     <ClCompile Include="src\button.cpp" />
     <ClCompile Include="src\currency.cpp" />
+    <ClCompile Include="src\customattacks.cpp" />
     <ClCompile Include="src\d2string.cpp" />
     <ClCompile Include="src\dbfaccess.cpp" />
     <ClCompile Include="src\dbf\dbffile.cpp" />
@@ -243,6 +244,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\categories.h" />
     <ClInclude Include="include\categoryids.h" />
     <ClInclude Include="include\currency.h" />
+    <ClInclude Include="include\customattacks.h" />
     <ClInclude Include="include\d2map.h" />
     <ClInclude Include="include\d2pair.h" />
     <ClInclude Include="include\d2string.h" />
